--- a/graphviz/preview/Containerfile
+++ b/graphviz/preview/Containerfile
@@ -8,6 +8,8 @@ COPY app.py .
 
 EXPOSE 8080/tcp
 ENV GRAPHVIZ_DATADIR=/data
-VOLUME /data
+ENV GRAPHVIZ_HOST="127.0.0.1"
+ENV GRAPHVIZ_PORT="8080"
+VOLUME $GRAPHVIZ_DATADIR
 CMD [ "python", "./app.py" ]
 
