--- a/.gitea/workflows/build-push-containers.yaml
+++ b/.gitea/workflows/build-push-containers.yaml
@@ -14,8 +14,10 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITEA_TOKEN }}
+
     - id: set-matrix
       run: |
         python -c 'import os
@@ -34,6 +36,8 @@ jobs:
       matrix: ${{fromJson(needs.id-containers.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITEA_TOKEN }}
 
       - name: build
         uses: redhat-actions/buildah-build@v2
