temp switch to any push

--- a/.gitea/workflows/build-push-containers.yaml
+++ b/.gitea/workflows/build-push-containers.yaml
@@ -1,10 +1,10 @@
 name: build-push-containers
 
 on:
-  push:
-    paths:
-      - '**/Containerfile'
-      - '**/Dockerfile'
+  push: []
+#    paths:
+#      - '**/Containerfile'
+#      - '**/Dockerfile'
 
 jobs:
   id-containers:
