--- a/.gitea/workflows/build-push-containers.yaml
+++ b/.gitea/workflows/build-push-containers.yaml
@@ -20,7 +20,7 @@ jobs:
 
     - name: set-matrix
       run: |
-        python -c 'import os
+        /usr/bin/env python -c 'import os
         import json
         def find_all(name, path):
             result = []
