On push paths seems broken

--- a/.gitea/workflows/build-push-containers.yaml
+++ b/.gitea/workflows/build-push-containers.yaml
@@ -1,10 +1,6 @@
 name: build-push-containers
 
-on:
-  push:
-    paths:
-      - '**/Containerfile'
-      - '**/Dockerfile'
+on: push
 
 jobs:
   id-containers:
