--- a/graphviz/graphviz-preview/.concourse.yaml
+++ b/graphviz/graphviz-preview/.concourse.yaml
@@ -4,6 +4,7 @@ resources:
   icon: docker
   check_every: never
   source:
+    tag: latest
     repository: gitea.fabiv.pw/fborries/utilities/graphviz-preview
     username: ((fborries-gitea.username))
     password: ((fborries-gitea.password))
@@ -25,34 +26,35 @@ jobs:
   plan:
   - get: container.python
     trigger: true
-    skip_download: true
+    params:
+      skip_download: true
   - get: repo
     trigger: true
   - task: build-graphviz-preview
-      privileged: true
-      config:
-        platform: linux
-        image_resource:
-          type: registry-image
-          source:
-            repository: gcr.io/kaniko-project/executor
-            tag: debug
-        run:
-          path: sh
-          args:
-          - "-exc"
-          - |
-            sed 's/\:[0-9]*/\:1/' /etc/resolv.conf > /kaniko/resolv.conf
-            cat /kaniko/resolv.conf > /etc/resolv.conf
-            rm /kaniko/resolv.conf
-            /kaniko/executor \
-            --dockerfile=repo/graphviz/graphviz-preview/Containerfile \
-            --context=dir://repo/graphviz/graphviz-preview \
-            --tar-path=build-graphviz-preview/image.tar \
-            --destination=gitea.fabiv.pw/fborries/utilities/graphviz-preview:latest \
-            --no-push --reproducible
-        inputs: [{"name":"repo"}]
-        outputs: [{"name":"build-graphviz-preview"}]
+    privileged: true
+    config:
+      platform: linux
+      image_resource:
+        type: registry-image
+        source:
+          repository: gcr.io/kaniko-project/executor
+          tag: debug
+      run:
+        path: sh
+        args:
+        - "-exc"
+        - |
+          sed 's/\:[0-9]*/\:1/' /etc/resolv.conf > /kaniko/resolv.conf
+          cat /kaniko/resolv.conf > /etc/resolv.conf
+          rm /kaniko/resolv.conf
+          /kaniko/executor \
+          --dockerfile=repo/graphviz/graphviz-preview/Containerfile \
+          --context=dir://repo/graphviz/graphviz-preview \
+          --tar-path=build-graphviz-preview/image.tar \
+          --destination=gitea.fabiv.pw/fborries/utilities/graphviz-preview:latest \
+          --no-push --reproducible
+      inputs: [{"name":"repo"}]
+      outputs: [{"name":"build-graphviz-preview"}]
   - put: container.graphviz-preview
     inputs: detect
     params:
