--- a/graphviz/graphviz-preview/Containerfile
+++ b/graphviz/graphviz-preview/Containerfile
@@ -3,7 +3,7 @@ FROM docker.io/python:slim
 WORKDIR /usr/src/app
 COPY requirements.txt ./
 ENV DEBIAN_FRONTEND=noninteractive
-RUN pip install --no-cache-dir -r requirements.txt && apt update && apt install -y graphviz && rm -rf /var/lib/apt/lists/*
+RUN pip install --no-cache-dir -r requirements.txt && apt-get update && apt-get install -y graphviz && rm -rf /var/lib/apt/lists/*
 
 COPY app.py .
 
