--- a/graphviz/graphviz-preview/.concourse.yaml
+++ b/graphviz/graphviz-preview/.concourse.yaml
@@ -57,6 +57,6 @@ jobs:
       outputs: [{"name":"build-graphviz-preview"}]
   - put: container.graphviz-preview
     inputs: detect
+    no_get: true
     params:
-      skip_download: true
       image: build-graphviz-preview/image.tar
